# tf_as_shared_lib

./: CMakeLists.txt  README.md  main.cpp
